fix: message and view message text wrap correctly

--- a/angular-standalone/base/src/global.scss
+++ b/angular-standalone/base/src/global.scss
@@ -24,3 +24,7 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+html {
+  --ion-dynamic-font: var(--ion-default-dynamic-font);
+}
