--- a/angular-standalone/official/list/src/app/message/message.component.scss
+++ b/angular-standalone/official/list/src/app/message/message.component.scss
@@ -11,6 +11,17 @@ ion-label {
 ion-item h2 {
   font-weight: 600;
   margin: 0;
+  
+  /**
+   * With larger font scales
+   * the date/time should wrap to the next
+   * line. However, there should be
+   * space between the name and the date/time
+   * if they can appear on the same line.
+   */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 ion-item p {
@@ -21,7 +32,6 @@ ion-item p {
 }
 
 ion-item .date {
-  float: right;
   align-items: center;
   display: flex;
 }
