--- a/react-vite/official/list/src/pages/ViewMessage.css
+++ b/react-vite/official/list/src/pages/ViewMessage.css
@@ -10,10 +10,20 @@
 
 #view-message-page ion-item h2 {
   font-weight: 600;
+  
+  /**
+   * With larger font scales
+   * the date/time should wrap to the next
+   * line. However, there should be
+   * space between the name and the date/time
+   * if they can appear on the same line.
+   */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 #view-message-page ion-item .date {
-  float: right;
   align-items: center;
   display: flex;
 }
